docs/book/samples/appa/cramped_binding_check.out
error[formatting]: canonical form requires exactly one space here
  --> cramped_binding_check.kso:1:7
   1 | answer=42
             ^
error[formatting]: canonical form requires exactly one space here
  --> cramped_binding_check.kso:1:8
   1 | answer=42
              ^
